2006-02-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #328283

	* e-table-item.c: (eti_tree_unfreeze): Added the return value for 
	scroll-event handler which causes a crash

2006-01-27  Andre Klapper <a9016009@gmx.de>
	* e-table-config-no-group.glade:
	* e-table-config.glade:
	removed string "dialog1" from translation. Fixes bug 306118.

2006-01-13  Srinivasa Ragavan  <sragavan@novell.com>

	* e-table-item.c: (adjustment_changed), (eti_tree_unfreeze),
	(eti_realize): Fixes the scroll issue with e-tree.

2005-12-21  Chenthill Palanisamy  <pchenthill@novell.com>

	committing for Akira TAGOH <tagoh@gnome-db.org>
	
	Fixes #303876
	* table/e-cell-text.c: (ect_event): Check if its a keep press
	event when the Return key is pressed.

2005-12-18  Tor Lillqvist  <tml@novell.com>

	* e-table-config.c (find_model_column_by_name): Use
	g_ascii_strcasecmp() instead of g_strcasecmp(). This function
	handles the English column names.

	* e-table-specification.c (e_table_specification_load_from_file)
	* e-table-state.c (e_table_state_load_from_file):
	Use e_xml_parse_file().

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Link with bootstrap libs on Win32. Use
	E_WIDGETS_CFLAGS instead of GNOME_BONOBO_CFLAGS, GNOME_INCLUDEDIR,
	ICONV_CFLAGS and GNOME_FULL_CFLAGS. Link with all required
	libraries. Use -no-undefined on Win32.

2005-12-09  Harish Krishnaswamy  <kharish@novell.com>

	* e-table-example-2.c (create_table):
	* e-table-extras.c (ete_init):
	* e-table-size-test.c (create_table):
	* test-check.c (check_test):
	* test-cols.c (multi_cols_test):
	* test-table.c (table_browser_test):
	 s/g_*_compare/e_*_compare. 

2005-12-07  Boby Wang  <boby.wang@sun.com>

	Fixes #322740.
	* e-tree.c: (item_key_press):  change the condition
	expression for GDK_RIGHT and GDK_LEFT.

2005-12-06  Li Yuan <li.yuan@sun.com>

	* e-tree.c: (table_canvas_focus_event_cb):
	Fixes bug #322776.
	When focus come into e-tree, it is possible that the focused_item 